--- a/less/hacker.less
+++ b/less/hacker.less
@@ -1,6 +1,7 @@
-
 // import bootstrap base
-@import "bootstrap/bootstrap.less";
+@import "node_modules/bootstrap/less/bootstrap.less";
+
+@import url(https://fonts.googleapis.com/css?family=Inconsolata:400,700);
 
 // import custom variables
 @import "hacker/_variables.less";
